; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/compatlib/extr_informix.c_decadd.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/compatlib/extr_informix.c_decadd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@PGTYPESnumeric_add = common dso_local global i32 0, align 4
@PGTYPES_NUM_OVERFLOW = common dso_local global i64 0, align 8
@ECPG_INFORMIX_NUM_OVERFLOW = common dso_local global i32 0, align 4
@PGTYPES_NUM_UNDERFLOW = common dso_local global i64 0, align 8
@ECPG_INFORMIX_NUM_UNDERFLOW = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @decadd(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  store i64 0, i64* @errno, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = load i32*, i32** %7, align 8
  %11 = load i32, i32* @PGTYPESnumeric_add, align 4
  %12 = call i32 @deccall3(i32* %8, i32* %9, i32* %10, i32 %11)
  %13 = load i64, i64* @errno, align 8
  %14 = load i64, i64* @PGTYPES_NUM_OVERFLOW, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %3
  %17 = load i32, i32* @ECPG_INFORMIX_NUM_OVERFLOW, align 4
  store i32 %17, i32* %4, align 4
  br label %29

18:                                               ; preds = %3
  %19 = load i64, i64* @errno, align 8
  %20 = load i64, i64* @PGTYPES_NUM_UNDERFLOW, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %24

22:                                               ; preds = %18
  %23 = load i32, i32* @ECPG_INFORMIX_NUM_UNDERFLOW, align 4
  store i32 %23, i32* %4, align 4
  br label %29

24:                                               ; preds = %18
  %25 = load i64, i64* @errno, align 8
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %24
  store i32 -1, i32* %4, align 4
  br label %29

28:                                               ; preds = %24
  store i32 0, i32* %4, align 4
  br label %29

29:                                               ; preds = %28, %27, %22, %16
  %30 = load i32, i32* %4, align 4
  ret i32 %30
}

declare dso_local i32 @deccall3(i32*, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
